adds articles to index.html

--- a/week3/index.html
+++ b/week3/index.html
@@ -1,12 +1,42 @@
 <!DOCTYPE html>
 <hmtl lang="en">
-  <head> 
-<meta charset="UTF-8">
-<title>Beck's Coffee shop - Home </title>
+
+  <head>
+    <meta charset="UTF-8">
+    <title>Beck's Coffee shop - Home </title>
 
   </head>
+
   <body>
-<h1>Beck's coffee shop</h1>
-<p> Welcome to our shop !</p>
+    <!-- this is HTML comment -->
+    <!-- command/ctrl + to add or remove comment -->
+    <!--  -->
+    <header>
+      <h1> Beck's coffee shop</h1>
+    </header>
+    <main>
+      <article>
+        <h2>our story </h2>
+        <p>
+          We are a <em> family owned business </em>. Beck is the <abbr title="cheif Executive officer">CEO</abbr> and
+          head Brista of shop. Maria is the pastry chef and is in charge of the bake shop. Celerating their
+          10<sup>th</sup> anniversary together in March 2024.
+
+        </p>
+        <blockquote>
+          love coffee !!<cite> Beck and Maria </cite>
+        </blockquote>
+        <hr>
+        <section>
+          <h3> Ottawa </h3>
+          <p>
+            We are local coffee shop in Ottawa. Our Special is <b>Organic fair-trade </b> Coffee.
+
+          </p>
+        </section>
+      </article>
+    </main>
+    <footer></footer>
+
   </body>
-</hmtl> 
+</hmtl>
