adds sections to index.html and footer

--- a/week3/index.html
+++ b/week3/index.html
@@ -35,8 +35,60 @@
           </p>
         </section>
       </article>
+      <aside>
+        <h3>Merchandise </h3>
+        <!-- adding an unorderws list  -->
+        <ul>
+          <li> T-shirts </li>
+          <li>Hats</li>
+          <li>Hoodies </li>
+
+        </ul>
+
+      </aside>
+      <!-- adding a section for an order list -->
+      <section>
+        <h3>Events</h3>
+        <ol>
+          <li> October 23 <sup> rd</sup> - coffee for Hope Foundation </li>
+          <li> November 17 <sup> th</sup>- Live Music </li>
+        </ol>
+      </section>
+      <!-- adding a sectio for description list  -->
+      <section>
+        <h3> Treat of week</h3>
+        <dl>
+          <dt>Name </dt>
+
+          <dd> Banana Bread</dd>
+
+          <dt> Calories</dt>
+
+          <dd> 250 Cal</dd>
+
+          <dl> Ingredient</dl>
+          <dd>
+            <ul>
+
+              <li>All purpose Flour</il>
+              <li> Baking soda</il>
+              <li>Baking powder</il>
+              <li> salt</il>
+              <li>Butter </il>
+              <li> Sugar</il>
+              <li> Eggs</il>
+              <li>Banana</il>
+            </ul>
+          </dd>
+        </dl>
+
+      </section>
     </main>
-    <footer></footer>
+    <!-- Site footter -->
+    <footer>
+      <!-- Special symbols HTML can be find by google HMTL entities  -->
+      Copyright &copy; Beck's Coffee Shop, 2023
+    </footer>
 
   </body>
 </hmtl>
