remove header top

--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
-  <head>
+  
     <meta charset="UTF-8">
-  </head>
+  
   <body>
 <header><h1> Rebecca </h1></header>
 <Article><h2><em>About me</em></h2></Article>
-<p>I have a passion for learning. I tried many classes, such as science, music, fitness, trades (architecture and electrical), and performing arts. I graduated from the Performing Art certificate program. It was an excellent introduction to performing music, acting and behind the scenes. It helped with stage fright and presentation skills.</p>
+<p>I have a passion for learning. I tried many classes, such as science, music, fitness, trades, and performing arts. I graduated from the Performing Art certificate program. It was an excellent introduction to performing music, acting and behind the scenes. It helped with stage fright and presentation skills.</p>
 <p>I enjoy art drawing, and photography is my favourite. The fun part is creativity, drawing what you want, and seeing the result. Photography is fantastic because photos are memories of the past. Taking photos of nature is an inspiration and seeing the beauty in nature.</p>
 
 
 
 <footer>
-  Copyright &copy; Rebecca about me 2023
+  Copyright &copy; Rebecca Cooper about me 2023
 </footer>
   </body>
 
