--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
-  
+  <head>
     <meta charset="UTF-8">
-  
+  </head>
   <body>
 <header><h1> Rebecca </h1></header>
 <Article><h2><em>About me</em></h2></Article>
