--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -9,7 +9,9 @@
 <p>I have a passion for learning. I tried many classes, such as science, music, fitness, trades, and performing arts. I graduated from the Performing Art certificate program. It was an excellent introduction to performing music, acting and behind the scenes. It helped with stage fright and presentation skills.</p>
 <p>I enjoy art drawing, and photography is my favourite. The fun part is creativity, drawing what you want, and seeing the result. Photography is fantastic because photos are memories of the past. Taking photos of nature is an inspiration and seeing the beauty in nature.</p>
 
-
+<blockquote>
+  I enjoy art drawing <cite> Rebecca Cooper     </cite>
+</blockquote>
 
 <footer>
   Copyright &copy; Rebecca Cooper about me 2023
