add superscript, abbrv and remove head

--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html>
-  <head>
+  
     <meta charset="UTF-8">
-  </head>
+  
   <body>
 <header><h1> Rebecca </h1></header>
 <Article><h2><em>About me</em></h2></Article>
 <p>I have a passion for learning. I tried many classes, such as science, music, fitness, trades, and performing arts. I graduated from the Performing Art certificate program. It was an excellent introduction to performing music, acting and behind the scenes. It helped with stage fright and presentation skills.</p>
-<p>I enjoy art drawing, and photography is my favourite. The fun part is creativity, drawing what you want, and seeing the result. Photography is fantastic because photos are memories of the past. Taking photos of nature is an inspiration and seeing the beauty in nature.</p>
+<p>I enjoy art drawing, and photography is my favourite. The fun part is creativity, drawing what you want, and seeing the result. Christmas day December 25 <sup> th </sup> is the best time to do drawing. It is the most relaxing holiday.
+  Photography is fantastic because photos are memories of the past. Taking photos of nature is an inspiration and seeing the beauty in nature.
+  <abbr title="For your informtion "> FYI </abbr> I enjoy all arts.
+</p>
 
 <blockquote>
-  I enjoy art drawing <cite> Rebecca Cooper     </cite>
+  I enjoy art drawing <cite> Rebecca Cooper</cite>
 </blockquote>
 
 <footer>
