adds archor tag to html

--- a/week4/index.html
+++ b/week4/index.html
@@ -13,10 +13,20 @@
     <!--  -->
     <header>
       <h1> Beck's coffee shop</h1>
+      <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="contact.html">Contact Us</a></li>
+      </ul>
+    </nav>
     </header>
-    <main>
+    <main> 
+      <!-- adding an on page link  --> 
+      <a href="#Treatoftheweek">Treat of the Week</a>
       <article>
         <h2>our story </h2>
+        <!-- adding image -->
+        <img src="./images/coffee-shop.jpg" alt="Coffee cup on a pile of coffee beans" title="coffee cup on a pile beans">
         <p>
           We are a <em> family owned business </em>. Beck is the <abbr title="cheif Executive officer">CEO</abbr> and
           head Brista of shop. Maria is the pastry chef and is in charge of the bake shop. Celerating their
@@ -55,7 +65,7 @@
         </ol>
       </section>
       <!-- adding a sectio for description list  -->
-      <section>
+      <section id="Treatoftheweek">
         <h3> Treat of week</h3>
         <dl>
           <dt>Name </dt>
@@ -81,6 +91,8 @@
             </ul>
           </dd>
         </dl>
+        <!-- adding external link -->
+        <a href="https://www.canadianliving.com/food/recipe/cranberry-banana-bread-2" target="_blank"> the recipe</a>
 
       </section>
     </main>
