table , contact and forms

--- a/week4/index.html
+++ b/week4/index.html
@@ -14,19 +14,20 @@
     <header>
       <h1> Beck's coffee shop</h1>
       <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="contact.html">Contact Us</a></li>
-      </ul>
-    </nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="contact.html">Contact Us</a></li>
+        </ul>
+      </nav>
     </header>
-    <main> 
-      <!-- adding an on page link  --> 
+    <main>
+      <!-- adding an on page link  -->
       <a href="#Treatoftheweek">Treat of the Week</a>
       <article>
         <h2>our story </h2>
         <!-- adding image -->
-        <img src="./images/coffee-shop.jpg" alt="Coffee cup on a pile of coffee beans" title="coffee cup on a pile beans">
+        <img src="./images/coffee-shop.jpg" alt="Coffee cup on a pile of coffee beans"
+          title="coffee cup on a pile beans">
         <p>
           We are a <em> family owned business </em>. Beck is the <abbr title="cheif Executive officer">CEO</abbr> and
           head Brista of shop. Maria is the pastry chef and is in charge of the bake shop. Celerating their
@@ -94,6 +95,34 @@
         <!-- adding external link -->
         <a href="https://www.canadianliving.com/food/recipe/cranberry-banana-bread-2" target="_blank"> the recipe</a>
 
+      </section>
+      <!-- adding another for Menu Table  -->
+      <section>
+        <h3>Menu Specials</h3>
+        <table border>
+          <thead>
+            <tr>
+              <th colspan="2"> Items</th>
+              <th rowspan="2"> Price</th>
+            </tr>
+            <tr>
+              <th>Name </th>
+              <th>Calories</th>
+            </tr>
+          </thead>
+
+          <tbody>
+            <tr>
+              <td> Banana Bread</td>
+              <td>250</td>
+              <td>&dollar; 6.00</td>
+            <tr>
+              <td>Oatmeal</td>
+              <td>110</td>
+              <td>&dollar; 8.00</td>
+            </tr>
+          </tbody>
+        </table>
       </section>
     </main>
     <!-- Site footter -->
