--- a/week4/contact.html
+++ b/week4/contact.html
@@ -44,6 +44,56 @@
           
         </tbody>
       </table>
+
+      <!-- adding section for contact form  -->
+      <section>
+        <h3> We would love ro hear from you!</h3>
+        <!-- adding form -->
+        <form action="thanks.html" method="post">
+
+      
+        <div> 
+        <label for="fullname">your name</label>
+        <input type="text" id="fullname" name="fullname" placeholder="Jane/Joe Doe">
+        </div>
+        <div>
+        <label for="youremail">Email</label>
+        <input type="email" id="youremail" placeholder="Algonquin Email" value="@algonquinlive.com" required>
+      </div>
+<div>
+  <label for="message">message</label>
+  <textarea name="message" id="message"></textarea>
+
+</div>
+<div>
+  <label for=""> tickets? &#40;sold in pairs &#41;</label>
+  <input type="number" name="tickets?" id="tickets?" min ="2" max="10" step="2" value="2">
+
+</div>
+<div>
+  <label for="row"></label>
+  <select name="row" id="row">
+    <option value="front">Front</option>
+    <option value ="centre"> centre</option>
+    <option value="back">back row</option>
+      </select>
+</div>
+<div>
+  <h3> Have you been hear before </h3>
+  <label for="yes">yes</label>
+  <input type="radio" name ="past" id="yes">
+  <label for="no">NO</label>
+  <input type="radio" name="past" id="no">
+
+</div>
+<div>
+  <h3> policies</h3>
+  <label for="policies"> I agree with the terms and condition.</label>
+  <input type="checkbox" name="policies" id="policies">
+</div>
+<button type="button">Submit</button>
+</form>
+      </section>
     </main>
     <!-- Site footter -->
     <footer>
