add images folder , image, html page heading,navi

--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -4,8 +4,25 @@
     <meta charset="UTF-8">
   </head>
   <body>
-<header><h1> Rebecca </h1></header>
-<Article><h2><em>About me</em></h2></Article>
+<header><h1> Rebecca </h1>
+ 
+
+<nav>
+  <!-- understanding week 4 notes to create nav and html page  -->
+<a href="index.html">Aboutme</a> 
+<a href="notes.html">Notes</a> 
+</nav>
+</header>
+<main>
+<Article>
+  <!-- understanding week 4 notes to create images src , alt 
+    Used https://imdac.github.io/modules/html/html-images/#title-attribute
+     for sizing image to fit the window
+   -->
+  <h2><em>About me</em></h2>
+  <img src="./images/goatRCphoto.jpg" alt="goat behind fence" width="200" height="200">
+
+</Article>
 <blockquote>
   I enjoy art drawing and it is amazing  <cite> Rebecca Cooper</cite>
 </blockquote>
@@ -15,7 +32,14 @@
   In addition ,photography is fantastic because photos are memories of the past. Taking photos of nature is an inspiration and seeing the beauty in nature.
   <abbr title="For your informtion "> FYI </abbr> I enjoy all arts.
 </p>
+<h3> My favourite Hobbies</h3>
+<ol>
+  <li>Art  <ul><li> drawing </li> <li>painting</li><li> art on computer</li></ul></li>
+  <li> sports <ul> <li> biking</li> <li> tennis </li> <li> walking</li></ul> </li>
+  <li> music <ul> <li> singing </li> <li> piano </li> </ul> 
 
+</ol>
+</main>
 <footer>
   Copyright &copy; Rebecca Cooper about me 2023
 </footer>
