check errors and fix errors

--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 
 <html>
-<head> <h1> Notes</h1> </head>
+<header><h1>Notes</h1> 
+  <h2> What HTML I learned ?</h2></header>
 <body>
-<header></header>
   <main>
-    <h2> What HTML I learned ? </h2>
+   <title> What HTML I learned ?</title> 
     <!-- (open bracket &#10094; &#10095; is close bracket ) text. slash is &#47;-->  
     <!-- use to find backet and slash html code
        https://www.toptal.com/designers/htmlarrows/punctuation/   -->
