adds link to css

--- a/week5/contact.html
+++ b/week5/contact.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Beck's Coffee shop - Contact Us  </title>
-
+    <link re="stylesheet" href="css/main.css"
   </head>
 
   <body>
@@ -14,14 +14,14 @@
       <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="contact.html">Contact Us</a></li>
+        <li><a href="contact.html" class="current">Contact Us</a></li>
       </ul>
     </nav>
     </header>
     <main>
       <h2>Contact us</h2>
     
-      <table border>
+      <table >
         <caption> Hours of Operation</caption>
         <thead>
           <th>Day</th>
