adds styles sheet to index

--- a/week5/index.html
+++ b/week5/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Beck's Coffee shop - Home </title>
-
+    <link rel="stylesheet" href="css/main.css">
   </head>
 
   <body>
@@ -15,14 +15,14 @@
       <h1> Beck's coffee shop</h1>
       <nav>
         <ul>
-          <li><a href="index.html">Home</a></li>
+          <li><a href="index.html" class="current">Home</a></li>
           <li><a href="contact.html">Contact Us</a></li>
         </ul>
       </nav>
     </header>
     <main>
       <!-- adding an on page link  -->
-      <a href="#Treatoftheweek">Treat of the Week</a>
+      <a href="#Treatoftheweek" class="blue-link">Treat of the Week</a>
       <article>
         <h2>our story </h2>
         <!-- adding image -->
@@ -34,7 +34,7 @@
           10<sup>th</sup> anniversary together in March 2024.
 
         </p>
-        <blockquote>
+        <blockquote class="large-text">
           love coffee !!<cite> Beck and Maria </cite>
         </blockquote>
         <hr>
@@ -67,8 +67,8 @@
       </section>
       <!-- adding a sectio for description list  -->
       <section id="Treatoftheweek">
-        <h3> Treat of week</h3>
-        <dl>
+        <h3 class="white-text"> Treat of week</h3>
+        <dl class="white-text">
           <dt>Name </dt>
 
           <dd> Banana Bread</dd>
@@ -99,7 +99,7 @@
       <!-- adding another for Menu Table  -->
       <section>
         <h3>Menu Specials</h3>
-        <table border>
+        <table>
           <thead>
             <tr>
               <th colspan="2"> Items</th>
@@ -126,7 +126,7 @@
       </section>
     </main>
     <!-- Site footter -->
-    <footer>
+    <footer class="site-footer">
       <!-- Special symbols HTML can be find by google HMTL entities  -->
       Copyright &copy; Beck's Coffee Shop, 2023
     </footer>
