--- a/week5/contact.html
+++ b/week5/contact.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Beck's Coffee shop - Contact Us  </title>
-    <link re="stylesheet" href="css/main.css"
+    <link re="stylesheet" href="css/main.css">
   </head>
 
   <body>
