add nav href index and notes

--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -2,7 +2,17 @@
 
 <html>
 <header><h1>Notes</h1> 
-  <h2> What HTML I learned ?</h2></header>
+  <h2> What HTML I learned ?</h2>
+
+  <nav>
+    <!-- understanding week 4 notes to create nav and html page  -->
+  <a href="index.html">Aboutme</a> 
+  <a href="notes.html">Notes</a> 
+  </nav>
+
+
+
+</header>
 <body>
   <main>
    <title> What HTML I learned ?</title> 
