--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>About me</title>
+    <link href="css/main.css" rel="stylesheet" >
   </head>
   <body>
 <header><h1> Rebecca </h1>
