--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 
 <html>
+  <head>
+    <meta charset="UTF-8">
+    <link  href="css/main.css" rel="stylesheet">
+  </head>
 <header><h1>Notes</h1> 
   <h2> What HTML I learned ?</h2>
 
