add header footer css colour

--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <link  href="css/main.css" rel="stylesheet">
+    <link  href="css/main.css"\\ rel="stylesheet">
   </head>
 <header><h1>Notes</h1> 
   <h2> What HTML I learned ?</h2>
