fix the class name

--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -6,7 +6,7 @@
     <link href="css/main.css" rel="stylesheet" >
   </head>
   <body>
-<header class="site-tile"><h1> Rebecca </h1>
+<header class="site-title"><h1> Rebecca </h1>
  
 
 <nav>
