try to add id to image for css main

--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -22,7 +22,7 @@
      for sizing image to fit the window
    -->
   <h2><em>About me</em></h2>
-  <img src="./images/goatRCphoto.jpg" alt="goat behind fence" width="200" height="200">
+  <img id="my-image" src ="./images/goatRCphoto.jpg"  alt="goat behind fence" width="200" height="200">
 
 </Article>
 <blockquote>
@@ -36,7 +36,7 @@
 </p>
 <h3> My favourite Hobbies</h3>
 <ol>
-  <li>Art  <ul><li> drawing </li> <li>painting</li><li> art on computer</li></ul></li>
+  <li>Art </li> <ul><li> drawing </li> <li>painting</li><li> art on computer</li></ul></li>
   <li> sports <ul> <li> biking</li> <li> tennis </li> <li> walking</li></ul> </li>
   <li> music <ul> <li> singing </li> <li> piano </li> </ul> 
 
