fix  li to many and remove one

--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -13,6 +13,10 @@
   <!-- understanding week 4 notes to create nav and html page  -->
 <a href="index.html">Aboutme</a> 
 <a href="notes.html">Notes</a> 
+<ul>
+  <li>Hobbies</li>
+  <li>quotes</li>
+</ul>
 </nav>
 </header>
 <main>
@@ -36,7 +40,7 @@
 </p>
 <h3> My favourite Hobbies</h3>
 <ol>
-  <li>Art </li> <ul><li> drawing </li> <li>painting</li><li> art on computer</li></ul></li>
+  <li>Art </li> <ul><li> drawing </li> <li>painting</li><li> art on computer</li></ul>
   <li> sports <ul> <li> biking</li> <li> tennis </li> <li> walking</li></ul> </li>
   <li> music <ul> <li> singing </li> <li> piano </li> </ul> 
 
