--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -1,54 +1,75 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <title>About me</title>
-    <link href="css/main.css" rel="stylesheet" >
-  </head>
-  <body>
-<header class="site-title"><h1> Rebecca </h1>
- 
 
-<nav>
-  <!-- understanding week 4 notes to create nav and html page  -->
-<a href="index.html">Aboutme</a> 
-<a href="notes.html">Notes</a> 
-<ul>
-  <li>Hobbies</li>
-  <li>quotes</li>
-</ul>
-</nav>
-</header>
-<main>
-<Article>
-  <!-- understanding week 4 notes to create images src , alt 
+<head>
+  <meta charset="UTF-8">
+  <title>About me</title>
+  <link href="css/main.css" rel="stylesheet">
+</head>
+
+<body>
+  <header class="site-title">
+    <h1> Rebecca </h1>
+
+
+    <nav>
+      <!-- understanding week 4 notes to create nav and html page  -->
+      <a href="index.html">Aboutme</a>
+      <a href="notes.html">Notes</a>
+      <ul>
+        <li>Hobbies</li>
+        <li>quotes</li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <Article>
+      <!-- understanding week 4 notes to create images src , alt 
     Used https://imdac.github.io/modules/html/html-images/#title-attribute
      for sizing image to fit the window
    -->
-  <h2><em>About me</em></h2>
-  <img id="my-image" src ="./images/goatRCphoto.jpg"  alt="goat behind fence" width="200" height="200">
+      <h2><em>About me</em></h2>
+      <img id="my-image" src="./images/goatRCphoto.jpg" alt="goat behind fence" width="200" height="200">
 
-</Article>
-<blockquote>
-  I enjoy art drawing and it is amazing  <cite> Rebecca Cooper</cite>
-</blockquote>
+    </Article>
+    <blockquote>
+      I enjoy art drawing and it is amazing <cite> Rebecca Cooper</cite>
+    </blockquote>
 
-<p>I have a passion for learning. I tried many classes, such as science, music, fitness, trades, and performing arts. I graduated from the Performing Art certificate program. It was an excellent introduction to performing music, acting and behind the scenes. It helped with stage fright and presentation skills.</p>
-<p>I enjoy art drawing, and photography is my favourite. The fun part is creativity, drawing what you want, and seeing the result. Christmas day December 25 <sup> th </sup> is the best time to do drawing. It is the most relaxing holiday.
-  In addition ,photography is fantastic because photos are memories of the past. Taking photos of nature is an inspiration and seeing the beauty in nature.
-  <abbr title="For your informtion "> FYI </abbr> I enjoy all arts.
-</p>
-<h3> My favourite Hobbies</h3>
-<ol>
-  <li>Art </li> <ul><li> drawing </li> <li>painting</li><li> art on computer</li></ul>
-  <li> sports <ul> <li> biking</li> <li> tennis </li> <li> walking</li></ul> </li>
-  <li> music <ul> <li> singing </li> <li> piano </li> </ul> 
+    <p>I have a passion for learning. I tried many classes, such as science, music, fitness, trades, and performing
+      arts. I graduated from the Performing Art certificate program. It was an excellent introduction to performing
+      music, acting and behind the scenes. It helped with stage fright and presentation skills.</p>
+    <p>I enjoy art drawing, and photography is my favourite. The fun part is creativity, drawing what you want, and
+      seeing the result. Christmas day December 25 <sup> th </sup> is the best time to do drawing. It is the most
+      relaxing holiday.
+      In addition ,photography is fantastic because photos are memories of the past. Taking photos of nature is an
+      inspiration and seeing the beauty in nature.
+      <abbr title="For your informtion "> FYI </abbr> I enjoy all arts.
+    </p>
+    <h3> My favourite Hobbies</h3>
+    <ol>
+      <li>Art </li>
+      <ul>
+        <li> drawing </li>
+        <li>painting</li>
+        <li> art on computer</li>
+      </ul>
+      <li> sports </li> <ul>
+          <li> biking</li>
+          <li> tennis </li>
+          <li> walking</li>
+        </ul>
+      </li> 
+      <li> music </li> <ul>
+          <li> singing </li>
+          <li> piano </li>
+        </ul>
 
-</ol>
-</main>
-<footer>
-  Copyright &copy; Rebecca Cooper about me 2023
-</footer>
-  </body>
+    </ol>
+  </main>
+  <footer>
+    Copyright &copy; Rebecca Cooper about me 2023
+  </footer>
+</body>
 
 </html>
