--- a/midterm/index.html
+++ b/midterm/index.html
@@ -3,10 +3,26 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="">
+  <title>Life of a Starfish</title>
+  <link rel="stylesheet" href="main.css">
 </head>
 <body>
+  <header>
+    <img src="./images/lone-starfish-wide.jpg" alt=" starfish background">
+
+  <nav>
+    <a href="index.html"> Home </a>
+    <a href="story.html">Story</a>
+    <a href="contact.html">contact</a>
+    <h1> Life of a starfish</h1>
+  </nav>
+</header>
+<main>
+
+  
+</main>
+
+
   
 
 
