--- a/midterm/index.html
+++ b/midterm/index.html
@@ -18,8 +18,20 @@
   </nav>
 </header>
 <main>
+<article>
+<img src="./images/lone-starfish.jpg" alt="profile of a starfish">
+<p>
+
+
 
   
+</p>
+
+
+
+
+</article>
+
 </main>
 
 
