--- a/midterm/index.html
+++ b/midterm/index.html
@@ -20,24 +20,65 @@
 <main>
 <article>
 <img src="./images/lone-starfish.jpg" alt="profile of a starfish">
-<p>
-
-
-
-  
+<!-- https://loremipsum.io/generator/?n=5&t=p -->
+<p> 
+  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Elit sed vulputate mi sit amet mauris commodo quis. Libero id faucibus nisl tincidunt eget nullam non. Lectus arcu bibendum at varius vel pharetra vel. Mauris sit amet massa vitae tortor condimentum lacinia. Mattis vulputate enim nulla aliquet porttitor lacus luctus. Donec et odio pellentesque diam volutpat commodo sed egestas egestas. Nisi vitae suscipit tellus mauris a diam maecenas sed enim. Felis imperdiet proin fermentum leo. Ut enim blandit volutpat maecenas. Non diam phasellus vestibulum lorem sed. Orci sagittis eu volutpat odio facilisis mauris. At erat pellentesque adipiscing commodo elit at imperdiet dui accumsan. Interdum velit laoreet id donec. Tellus at urna condimentum mattis. Lorem sed risus ultricies tristique. Ante in nibh mauris cursus mattis molestie. Eu mi bibendum neque egestas congue. Praesent elementum facilisis leo vel fringilla est ullamcorper eget. Integer vitae justo eget magna fermentum iaculis.
+  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Elit sed vulputate mi sit amet mauris commodo quis. Libero id faucibus nisl tincidunt eget nullam non. Lectus arcu bibendum at varius vel pharetra vel. Mauris sit amet massa vitae tortor condimentum lacinia. Mattis vulputate enim nulla aliquet porttitor lacus luctus. Donec et odio pellentesque diam volutpat commodo sed egestas egestas. Nisi vitae suscipit tellus mauris a diam maecenas sed enim. Felis imperdiet proin fermentum leo. Ut enim blandit volutpat maecenas. Non diam phasellus vestibulum lorem sed. Orci sagittis eu volutpat odio facilisis mauris. At erat pellentesque adipiscing commodo elit at imperdiet dui accumsan. Interdum velit laoreet id donec. Tellus at urna condimentum mattis. Lorem sed risus ultricies tristique. Ante in nibh mauris cursus mattis molestie. Eu mi bibendum neque egestas congue. Praesent elementum facilisis leo vel fringilla est ullamcorper eget. Integer vitae justo eget magna fermentum iaculis.
 </p>
-
-
-
-
+<h2>Facts About Starfish </h2>
+<ul>
+<li>leo vel fringilla est ullamcorper eget.</li>
+<li>Eu mi bibendum neque egestas congue</li>
+<li>Ut enim blandit volutpat maecenas</li>
+<li>Mauris sit amet massa vitae tortor condimentum lacinia</li>
+</ul>
 </article>
 
+<section>
+  <h3>Contact to learn more</h3>
+  <form method="post" 
+  action="thankyou.html">
+  <ul>
+    <li>
+<label for="yourname">yourname</label>
+<input name="yourname" 
+id="yourname"
+type="text" required>
+</li>
+
+<li>
+<label for="youremail">youremail</label>
+<input name="youremail"
+id="youremail"
+type="email"required>
+</li>
+
+<li>
+<label for ="yourmessage" >yourmessage</label>
+<textarea name="yourmessage" id="yourmessage"
+id="yourmessage"></textarea>
+</li>
+</ul>
+
+<h4> Would you like to visit the Starfish.</h4>
+<label for="yes">yes</label>
+<input name="yes" type="radio" id="yes">
+<label for="no">no</label>
+<input name="no"type="radio" id="no">
+<label for="maybe">maybe</label>
+<input name="maybe" type="radio" id="maybe">
+<button type="button">submit</button>
+</form>
+</section>
 </main>
 
 
   
 
 
-
+<footer>
+ 
+</footer>
 </body>
+
 </html>
