fix and organize radio. indent code

--- a/midterm/index.html
+++ b/midterm/index.html
@@ -53,29 +53,27 @@
         <li>Mauris sit amet massa vitae tortor condimentum lacinia</li>
       </ul>
     </article>
-<!-- https://imdac.github.io/modules/html/html-form/#select    week 4 html forms how to  -->
+<!-- https://imdac.github.io/modules/html/html-form/#select    week 4 html forms how to create forms -->
     <section>
       <h3>Contact to learn more</h3>
       <form method="post" action="thankyou.html">
         <ul>
-          <li>
-            <label for="yourname">Your Name</label>
-            <input name="yourname" 
+          <li> <label for="yourname">Your Name</label></li>
+           <li><input name="yourname" 
             id="yourname" 
             type="text" required>
           </li>
 
           <li>
-            <label for="youremail">Your Email</label>
-            <input name="youremail" 
+            <label for="youremail">Your Email</label> </li>
+            <li><input name="youremail" 
             id="youremail" 
             type="email" required>
           </li>
 
           <li>
-            <label for="yourmessage">Your Message</label>
-            <textarea name="yourmessage" 
-            id="yourmessage" 
+            <label for="yourmessage">Your Message</label></li>
+            <li><textarea name="yourmessage" 
             id="yourmessage"></textarea>
           </li>
         </ul>
@@ -95,17 +93,15 @@
         <input name="yesnomaybe" 
         type="radio"
          id="maybe">
-
-        <button type="button">submit</button>
+<ul>
+        <li><button type="button">submit</button>
+        </li>
+      </ul>
       </form>
+
     </section>
   </main>
-
-
-
-
-
-  <footer>
+ <footer>
 
   </footer>
 </body>
