--- a/midterm/index.html
+++ b/midterm/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Life of a Starfish</title>
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
@@ -102,7 +102,7 @@
     </section>
   </main>
  <footer>
-
+  Copyright &copy; Lone Starfish
   </footer>
 </body>
 
