--- a/midterm/index.html
+++ b/midterm/index.html
@@ -9,9 +9,9 @@
 </head>
 
 <body>
-  <header>
-    <img src="./images/lone-starfish-wide.jpg" alt=" starfish background">
-    <h1> Life of a starfish</h1>
+  <header class="widestar">
+    <img src="./images/lone-starfish-wide.jpg" alt="starfish background">
+    <h1> Life of a Starfish</h1>
     <nav>
       <a href="index.html"> Home </a>
       <a href="story.html">Story</a>
