--- a/midterm/index.html
+++ b/midterm/index.html
@@ -11,18 +11,21 @@
 <body>
   <header class="widestar">
     <img src="./images/lone-starfish-wide.jpg" alt="starfish background">
-    <h1> Life of a Starfish</h1>
+    <h1>Lone Starfish</h1>
     <nav>
+
       <a href="index.html"> Home </a>
       <a href="story.html">Story</a>
-      <a href="contact.html">contact</a>
+      <a href="contact.html">Contact</a>
      
     </nav>
   </header>
   <main>
     <article>
+      <h2>Life of a Starfish</h2>
       <img src="./images/lone-starfish.jpg" alt="profile of a starfish">
       <!-- https://loremipsum.io/generator/?n=5&t=p -->
+
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
         magna aliqua. Elit sed vulputate mi sit amet mauris commodo quis. Libero id faucibus nisl tincidunt eget nullam
