--- a/midterm/index.html
+++ b/midterm/index.html
@@ -9,21 +9,24 @@
 </head>
 
 <body>
-  <header class="widestar">
-    <img src="./images/lone-starfish-wide.jpg" alt="starfish background">
-    <h1>Lone Starfish</h1>
-    <nav>
+  <header >
+    <div>
+      <img class="widestar"src="./images/lone-starfish-wide.jpg" alt="starfish background">
+    <h1 class="fontimg">Lone Starfish</h1>
+  </div>
+</header>
+    <nav >
 
       <a href="index.html"> Home </a>
       <a href="story.html">Story</a>
       <a href="contact.html">Contact</a>
      
     </nav>
-  </header>
+ 
   <main>
     <article>
       <h2>Life of a Starfish</h2>
-      <img src="./images/lone-starfish.jpg" alt="profile of a starfish">
+      <img class="starfish" src="./images/lone-starfish.jpg" alt="profile of a starfish">
       <!-- https://loremipsum.io/generator/?n=5&t=p -->
 
       <p>
