add div to pargraph

--- a/midterm/index.html
+++ b/midterm/index.html
@@ -28,7 +28,7 @@
       <h2>Life of a Starfish</h2>
       <img class="starfish" src="./images/lone-starfish.jpg" alt="profile of a starfish">
       <!-- https://loremipsum.io/generator/?n=5&t=p -->
-
+     <div>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
         magna aliqua. Elit sed vulputate mi sit amet mauris commodo quis. Libero id faucibus nisl tincidunt eget nullam
@@ -51,6 +51,7 @@
         mattis molestie. Eu mi bibendum neque egestas congue. Praesent elementum facilisis leo vel fringilla est
         ullamcorper eget. Integer vitae justo eget magna fermentum iaculis.
       </p>
+    </div>
       <h2>Facts About Starfish </h2>
       <ul>
         <li>leo vel fringilla est ullamcorper eget.</li>
