--- a/midterm/index.html
+++ b/midterm/index.html
@@ -26,8 +26,10 @@
   <main>
     <article>
       <h2>Life of a Starfish</h2>
+      <div>
       <img class="starfish" src="./images/lone-starfish.jpg" alt="profile of a starfish">
       <!-- https://loremipsum.io/generator/?n=5&t=p -->
+    </div>
      <div>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
