div around from, list, div around list

--- a/midterm/index.html
+++ b/midterm/index.html
@@ -49,21 +49,23 @@
         egestas egestas. Nisi vitae suscipit tellus mauris a diam maecenas sed enim. Felis imperdiet proin fermentum
         leo. Ut enim blandit volutpat maecenas. Non diam phasellus vestibulum lorem sed. Orci sagittis eu volutpat odio
         facilisis mauris. At erat pellentesque adipiscing commodo elit at imperdiet dui accumsan. Interdum velit laoreet
-        id donec. Tellus at urna condimentum mattis. Lorem sed risus ultricies tristique. Ante in nibh mauris cursus
-        mattis molestie. Eu mi bibendum neque egestas congue. Praesent elementum facilisis leo vel fringilla est
-        ullamcorper eget. Integer vitae justo eget magna fermentum iaculis.
+        id donec. Tellus at urna condimentum mattis. Lorem sed risus ultricies 
       </p>
     </div>
+
       <h2>Facts About Starfish </h2>
-      <ul>
+      <div>
+        <ul class="listfact">
         <li>leo vel fringilla est ullamcorper eget.</li>
         <li>Eu mi bibendum neque egestas congue</li>
         <li>Ut enim blandit volutpat maecenas</li>
         <li>Mauris sit amet massa vitae tortor condimentum lacinia</li>
       </ul>
+    </div>
     </article>
 <!-- https://imdac.github.io/modules/html/html-form/#select    week 4 html forms how to create forms -->
-    <section>
+    <div>
+<section class="contact">
       <h3>Contact to learn more</h3>
       <form method="post" action="thankyou.html">
         <ul>
@@ -107,7 +109,7 @@
         </li>
       </ul>
       </form>
-
+    </div>
     </section>
   </main>
  <footer>
