add new class to form and h3 , back ground color for main

--- a/midterm/index.html
+++ b/midterm/index.html
@@ -28,6 +28,9 @@
       <h2>Life of a Starfish</h2>
       <div>
       <img class="starfish" src="./images/lone-starfish.jpg" alt="profile of a starfish">
+     
+
+      
       <!-- https://loremipsum.io/generator/?n=5&t=p -->
     </div>
      <div>
@@ -65,9 +68,9 @@
     </article>
 <!-- https://imdac.github.io/modules/html/html-form/#select    week 4 html forms how to create forms -->
     <div>
-<section class="contact">
+<section>
       <h3>Contact to learn more</h3>
-      <form method="post" action="thankyou.html">
+      <form class="form" method="post" action="thankyou.html">
         <ul>
           <li> <label for="yourname">Your Name</label></li>
            <li><input name="yourname" 
