fix class blue-link,

--- a/week7/index.html
+++ b/week7/index.html
@@ -8,7 +8,7 @@
   </head>
 
   <body>
-
+ 
     <div class="container">
       <!-- this is HTML comment -->
       <!-- command/ctrl + to add or remove comment -->
@@ -95,7 +95,7 @@
             </dd>
           </dl>
           <!-- adding external link -->
-          <a href="https://www.canadianliving.com/food/recipe/cranberry-banana-bread-2" target="_blank" class="blue large-text"> recipe</a>
+          <a href="https://www.canadianliving.com/food/recipe/cranberry-banana-bread-2" target="_blank" class="blue-link large-text"> recipe</a>
 
         </section>
         <!-- adding another for Menu Table  -->
