--- a/midterm/index.html
+++ b/midterm/index.html
@@ -16,9 +16,9 @@
     <h1 class="fontimg">Lone Starfish</h1>
   <nav>
     <ul>
-     <li><a href="index.html"> Home </a></li>
-     <li><a href="story.html">Story</a></li>
-     <li><a href="contact.html">Contact</a></li>
+     <li><a class="bar" href="index.html"> Home </a></li>
+     <li><a class="bar" href="story.html">Story</a></li>
+     <li><a class="bar" href="contact.html">Contact</a></li>
    </ul>
    </nav>
 
