--- a/midterm/index.html
+++ b/midterm/index.html
@@ -17,9 +17,9 @@
     
   <nav>
     <ul>
-     <li><a class="bar" href="index.html"> Home </a></li>
-     <li><a class="bar" href="story.html">Story</a></li>
-     <li><a class="bar" href="contact.html">Contact</a></li>
+     <li><a href="index.html"> Home </a></li>
+     <li><a href="story.html">Story</a></li>
+     <li><a href="contact.html">Contact</a></li>
    </ul>
    </nav>
    
