add opening < to the label for maybe -line 116

--- a/midterm/index.html
+++ b/midterm/index.html
@@ -101,7 +101,7 @@
 <!-- https://www.w3schools.com/tags/att_input_type_radio.asp  understanding radio button-need same name sync togther-->
          
         <h5> Would you like to visit the Starfish.</h5>
-        <ul>
+        <ul class="radioin">
 
        <li> <label for="yes"> yes</label> </li>
         <li><input name="yesnomaybe" 
@@ -113,7 +113,7 @@
         type="radio" 
         id="no"></li>
 
-        <li>label for="maybe">maybe</label></li>
+        <li><label for="maybe">maybe</label></li>
         <li><input name="yesnomaybe" 
         type="radio"
          id="maybe"></li>
