adds Deskop styles to css changes

--- a/week9/index.html
+++ b/week9/index.html
@@ -40,7 +40,7 @@
       </section>
       <!-- Closing intro section -->
 
-      <section class="app">
+      <section class="app clearfix">
         <h2>mobile app</h2>
         <img src="images/actnowapp.jpg" alt="Act Now Mobile App">
         <div class="content">
@@ -69,7 +69,7 @@
         &copy; All information is taken the from the <a href="https://www.un.org/en/actnow"> United Act Now Website</a>
       </p>
     </footer>
-    
+
   </div>
 </body>
 
