--- a/week10/index.html
+++ b/week10/index.html
@@ -18,6 +18,16 @@
       <div class="banner">
         <h1>Act Now</h1>
       </div>
+      <nav>
+        <nav class="main-nav"></nav>
+        <ul class="nav-list">
+          <li><a href="index.html" class="current"> Home</a></li>
+          <li><a href="#">climate</a></li>
+          <li><a href="#">For Kids</a></li>
+          <li><a href="#">Facts and Figures</a></li>
+          
+         </ul>
+      </nav>
     </header>
     <main class="content">
       <section class="intro">
@@ -55,6 +65,22 @@
       </section>
 
       <!-- Closing App section -->
+      <section class="action">
+        <h2>Start Simple Actions</h2>
+        <ul class="action-list">
+        <li><img src="images/unplug.png" alt="Save energy">Save energy</li>
+        <li><img src="images/drive_less.png" alt="Walk or Bike">Walk or Bike</li>
+        <li><img src="images/plant-based.png" alt="Eat vegetables ">Eat vegetables<li>
+        <li><img src="images/fly-less.png" alt="Consider your travel ">Consider your travel</li>
+        <li><img src="images/eat-up.png" alt="Throw away less food"> Throw away less food </li>
+        <li><img src="images/recycle.png" alt="Reduce Reuse and Recycle">Reduce Reuse and Recycle</li>
+        <li><img src="images/use-renewable-energy.png" alt="Change Home's Energy Source"> Change Home's Energy Source </li>
+        <li><img src="images/electric-vehicle.png" alt="Switch to electric vehicles "> Switch to electric vehicles</li>
+        <li><img src="images/eco-friendly-products.png" alt="Make money count"> Makee money count</li>
+        <li><img src="images/speak-up.png" alt=" Speak Up"> Speak Up</li>
+        </ul>
+      </section>
+      <!-- Closing action section  -->
     </main>
     <footer class="site-footer">
       <ul class="attr-list">
